# AutoPR

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  context.py  controller.py
agent/steps/: __init__.py  code_generator.py  diff_generator.py  issue_parser.py  planner.py  pr_creator.py  repo_indexer.py  retriever.py
api/: __init__.py  main.py
autopr/: __init__.py  run.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
github/: __init__.py
github_client/: __init__.py  client.py
llm/: __init__.py  client.py  mock_client.py
tests/: __init__.py  test_e2e.py  test_e2e_real_pr.py
